--- a/Es7/Es7/Es7.csproj
+++ b/Es7/Es7/Es7.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attivita.cs" />
+    <Compile Include="GestoreAttivita.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
