Es7 - miglioramento output del programma

--- a/Es7/Es7/Es7.csproj
+++ b/Es7/Es7/Es7.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attivita.cs" />
+    <Compile Include="GestoreAlunni.cs" />
     <Compile Include="GestoreAttivita.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
