Es7 - rilevamento prima e ultima attività
This close #2

--- a/Es7/Es7/Es7.csproj
+++ b/Es7/Es7/Es7.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attivita.cs" />
+    <Compile Include="Gerarchia.cs" />
     <Compile Include="GestoreAlunni.cs" />
     <Compile Include="GestoreAttivita.cs" />
     <Compile Include="Parser.cs" />
